  * Coverage report no longer crashes for constant aliases.  Pull Request #1
    by Andy Lindeman.
  * RDoc no longer looses ghost methods when followed by certain tokens.
    RubyForge bug #27793 by Aaron Patterson.
  * RDoc no longer crashes in ri if HOME is not set.  Ruby Bug #4202 by
    Shyouhei Urabe.
  * ri no longer crashes with HTML format output.  RubyForge bug #28675 by
    7rans.

=== 3.0.1 / 2010-12-19

* Bug fix
  * RDoc no longer has a Perl parser.

=== 3.0 / 2010-12-19

Special thanks to Thierry Lambert for massive improvements to RDoc.

* Major enhancements
  * Ruby 1.8.6 is no longer supported by RDoc.
  * RDoc now converts input files to a single encoding specified by
    <tt>--encoding</tt>.  See RDoc::RDoc and RDoc::Options#encoding.
    <tt>--encoding</tt> is now preferred over <tt>--charset</tt>
  * RDoc now supports a <tt>--coverage-report</tt> flag (also <tt>-C</tt> and
    <tt>--dcov</tt>) that outputs a report on items lacking documentation.
  * Templates (<tt>rdoc -T</tt>) are now checked for existence in
    RDoc::Options.  Generator authors can now use RDoc::Options#template_dir
    which is the full path to the template directory.
  * Added support for class aliases.  Patch by Thierry Lambert.
  * Improved merging of classes and modules across multiple files including
    more accurate documentation statistics.  Patch by Thierry Lambert.
  * Improved handling of method aliases.  Patch by Thierry Lambert.
  * Improved handling of visibility of RDoc code objects.  Patch by Thierry
    Lambert.
  * RDoc::Attr#type is now RDoc::Attr#definition.  Patch by Thierry Lambert.
  * Removed TimeConstantMethods
  * RDoc now calls ::new instead of ::for on generators.
* Minor enhancements
  * Added rdoc arguments <tt>--dry-run</tt>, <tt>--all</tt>,
    <tt>--visibility</tt>, <tt>--force-output</tt>, <tt>--hyperlink-all</tt>.
    Patch by Thierry Lambert.
  * RDoc::Markup::FormatterTestCase has been expanded.  Patch by Thierry
    Lambert.